# uix

./: .gitattributes  .gitignore  .releaserc.yml  AGENTS.md  CHANGELOG.md  Makefile  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  tsconfig.json
.github/: DEPENDABOT_SECURITY.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature-request.md  feature-request.yml
.github/workflows/: dependabot-security-updates.yml  docs.yml  release.yml  stale.yml  validate.yml
custom_components/uix/: __init__.py  checks.py  config_flow.py  connection.py  const.py  diagnostics.py  helpers.py  manifest.json  uix.js
docs/: mkdocs.yml
docs/overrides/: main.html
docs/scenarios/: 01_theme_red_basic.yaml  03_theme_red_template.yaml  basic_01_first_uix.yaml  elements_01_conditional_regular.yaml  elements_02_conditional_leakage.yaml  entities_01_base.yaml  entities_02_conditional_regular.yaml  entities_03_conditional_leakage.yaml  entity_marker_01.yaml  forge_01_basic_element.yaml  forge_02_config_entity.yaml  forge_03_config_entity_full.yaml  forge_05_auto_entities.yaml  forge_06_uix_styling.yaml  forge_07_uix_element_styling.yaml  (+69 more)
src/: console_debug.ts  ll-custom-actions.ts  main.ts  mod-card.ts  theme-watcher.ts  uix.ts  view-background.ts
test/: .env  lovelace.yaml
tests/: README.md  conftest.py  doc-image-audit-exclusions.txt  ha_server.py  ha_version.py  plugins.py  plugins.yaml  test_connection_disable_hash_template_variable.py  test_console_debug_dom_helpers.py  test_doc_audit.py  test_forge_config_builder.py
(+230 files in other folders)
