[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uix"
version = "6.2.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "ha-testcontainer[test]==1.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
